# organize

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  404.html  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  c.yaml  config.default.yaml  config.py  config.yaml  docker-compose.yml  docker-conf.yml  docker-entrypoint.sh  index.html  main.py  makedocs.sh  manage.py  mkdocs.yml  objects.inv  pydantic-test.py  pydantic-test2.py  pyproject.toml  pyrightconfig.json  readme.md  readme.rst  rename-readme.rst  requirements.txt  run.py  search.html  setup.py  sitemap.xml  (+7 more)
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish-docker-image.yml  pythonpackage.yml  test.yml  tests.yml  testsuite.yml
01-config/: index.html
02-locations/: index.html
03-filters/: index.html
04-actions/: index.html
05-changelog/: index.html
06-updating-from-v1/: index.html
actions/: index.html
changelog/: index.html
configuration/: index.html
docker/: index.html
docs/: 01-config.md  03-filters.md  04-actions.md  06-updating-from-v1.md  Makefile  actions.md  changelog.md  conf.py  configuration.md  docker.md  filters.md  index.md  index.rst  locations.md  make.bat  migrating.md  outline.md  rules.md  textract-hints.md  updating-from-v1.md
docs/page/: actions.rst  config.rst  filters.rst  migration.md  quickstart.rst
docs/source/: conf.py
docs/source/page/: actions.rst  filters.rst
docs/sphinx/: config.rst
filters/: index.html
locations/: index.html
migrating/: index.html
organize/: __init__.py  __main__.py  __version__.py  _old_config.py  action.py  args.py  cli.py  compat.py  config.py  config_pydantic.py  console.py  core.py  errors.py  filter.py  find_config.py  fs.py  glob.py  helpers.py  location.py  logger.py  main.py  migration.py  organizer.py  output.py  pipeline.py  pydantic_actions.py  pydantic_config.py  pydantic_filters.py  registry.py  resource.py  rule.py  template.py  testconf.json  tui.py  utils.py  validators.py  walker.py
organize/actions/: __init__.py  _conflict.py  _conflict_resolution.py  _utils.py  action.py  append_text.py  confirm.py  copy.py  copymove_utils.py  delete.py  echo.py  email.py  hardlink.py  macos_tags.py  move.py  python.py  rename.py  shell.py  symlink.py  trash.py  utils.py  write.py  write_text.py
organize/actions/common/: conflict.py  folder_target.py  target_path.py  utils.py
organize/filters/: __init__.py  _timefilter.py  common_name.py  created.py  date_added.py  date_lastused.py  duplicate.py  duplicates.py  empty.py  exif.py  extension.py  file_content.py  file_extension.py  filecontent.py  filename.py  filesize.py  filter.py  hash.py  helpers.py  invoice_1and1.py  last_modified.py  lastmodified.py  macos_downloadsource.py  macos_tags.py  mimetype.py  name.py  paper_vdi.py  python.py  qtff.py  regex.py  size.py  utils.py
organize/filters/common/: timefilter.py
organize/migration/: _oldcore.py
organize/old/: config.py  core.py
organize/output/: __init__.py  _sender.py  changedetector.py  default.py  jsonl.py  output.py  queue.py  raw.py  rich.py  saving.py
rules/: index.html
search/: search_index.json
tests/: conftest.py  make_files.py  test_action_copy.py  test_action_echo.py  test_action_move.py  test_action_python.py  test_action_rename.py  test_action_shell.py  test_action_trash.py  test_api.py  test_changedetector.py  test_config.py  test_doc_examples.py  test_docs.py  test_filter_extension.py  test_filter_filename.py  test_filter_last_modified.py  test_filter_regex.py  test_filter_size.py  test_make_files.py  test_move.py  test_shell.py  test_trash.py  test_utils.py  test_validators.py  walker.py
tests/actions/: test_common.py  test_conflict_resolution.py  test_copy.py  test_delete.py  test_echo.py  test_macos_tags.py  test_move.py  test_python.py  test_rename.py  test_shell.py  test_symlink.py  test_trash.py  test_write.py  test_write_text.py
tests/combined/: test_cli.py  test_codepost_usecase.py  test_dependent_rules.py  test_example_config.py  test_keep_folder_structure.py  test_rename_regex.py  test_simple_replace.py
tests/core/: test_already_handled_files.py  test_config.py  test_filter_mode.py  test_ignore_seen_files.py  test_location.py  test_relativepath.py  test_tags.py  test_unicode.py  test_utils.py  test_utils_merge.py  test_walker.py
tests/docs/: test_docs.py
tests/filters/: test_created.py  test_duplicate.py  test_exif.py  test_extension.py  test_filecontent.py  test_filename.py  test_filesize.py  test_hash.py  test_last_modified.py  test_lastmodified.py  test_macos_downloadsources.py  test_macos_tags.py  test_mimetype.py  test_name.py  test_python.py  test_qtff.py  test_regex.py  test_size.py
tests/filters/examples/: test_extension.yaml
tests/integration/: test_advanced_attrs.py  test_cli.py  test_codepost_usecase.py  test_delete.py  test_dependent_rules.py  test_dict_merge.py  test_duplicate.py  test_exif.py  test_extension.py  test_file_content.py  test_filesize.py  test_folder_renaming.py  test_globstrings.py  test_integration.py  test_python_filter.py  test_rename.py  test_rename_regex.py  test_unicode.py
tests/organizer/: test_walker_settings.py
tests/rule/: test_matching.py  test_pattern.py  test_walker_settings.py
tests/todo/: todo_copy.py  todo_move.py  todo_rename.py
tests/todo/integration/: test_codepost_usecase.py  test_duplicate.py  test_exif.py  test_extension.py  test_file_content.py  test_filesize.py  test_globstrings.py  test_integration.py  test_python_filter.py  test_regex.py  test_rename.py  test_startswith.py  test_unicode.py
tests/utils/: test_deep_merge.py  test_is_same_resource.py  test_utils.py
textract-hints/: index.html
updating-from-v1/: index.html
