[tool.poetry]
name = "organize-tool"
version = "2.4.3"
description = "The file management automation tool"
packages = [{ include = "organize" }]
authors = ["Thomas Feldmann <mail@tfeldmann.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tfeldmann/organize"
documentation = "https://organize.readthedocs.io"
keywords = [
    "file",
    "management",
    "automation",
    "tool",
    "organization",
    "rules",
    "yaml",
]
classifiers = [
    # Full list: https://pypi.python.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]

[tool.poetry.scripts]
organize = "organize.cli:cli"

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
fs = ">=2.4.16"
rich = "^13.4.2"
PyYAML = "^6.0"
Send2Trash = { version = "^1.8.2", extras = ["nativeLib"] }
textract = { version = "^1.6.5", optional = true }
simplematch = "^1.3"
macos-tags = { version = "^1.5.1", markers = "sys_platform == 'darwin'" }
schema = "^0.7.5"
Jinja2 = "^3.1.2"
click = "^8.1.3"
ExifRead = "^2.3.2" # Pinned: https://github.com/tfeldmann/organize/issues/267

# must be in main dependencies for readthedocs.
mkdocs = { version = "^1.2.3", optional = true }
mkdocs-autorefs = { version = "^0.5.0", optional = true }
mkdocs-include-markdown-plugin = { version = "^6.0.0", optional = true }
mkdocstrings = { version = "^0.22.0", extras = ["python"], optional = true }
markupsafe = { version = "2.0.1", optional = true } # Pinned: https://stackoverflow.com/q/72191560/300783

[tool.poetry.extras]
textract = ["textract"]
docs = [
    "mkdocs",
    "mkdocs-autorefs",
    "mkdocs-include-markdown-plugin",
    "mkdocstrings",
    "markupsafe",
]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
mypy = "^1.4.0"
requests = "^2.31.0"
types-PyYAML = "^6.0.12.10"
coverage = "^7.2.0"
pytest-cov = "^4.1.0"
ruff = ">=0.0.285,<0.0.292"

[tool.coverage.run]
source = ['organize']

[tool.mypy]
python_version = "3.8"

[[tool.mypy.overrides]]
module = [
    "schema",
    "simplematch",
    "appdirs",
    "send2trash",
    "exifread",
    "textract",
    "requests",
    "macos_tags",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--doctest-modules"
testpaths = ["tests", "organize"]
norecursedirs = ["tests/todo", "organize/filters", ".configs"]

[tool.isort]
profile = "black"
skip_gitignore = true
line_length = 88

[tool.black]
line-length = 88
target-version = ['py38']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
